feat(security) changing a method for user and admin role