@@ -2,10 +2,12 @@ package com.devhub.opendevplatform.config;
 
 import com.devhub.opendevplatform.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -17,9 +19,9 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Por ahora devolvemos un rol fijo, luego puedes mapearlo desde la entidad User
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
+
 
     @Override
     public String getPassword() {
@@ -28,7 +30,6 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        // Aquí puedes usar email como "username" si tu login es por email
         return user.getEmail();
     }
 
